__demo6-gitops/traefik/mentors/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: praxe2026
spec:
  redirectScheme:
    scheme: https
    permanent: true
